[package]
name = "fc-cli"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier database backend"
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parity
ethereum-types = "0.13.1"

# Substrate
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", features = ["wasmtime"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

# Frontier
fc-db = { path = "../db" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[dev-dependencies]
futures = "0.3.21"
tempfile = "3.3.0"
# Parity
codec = { package = "parity-scale-codec", version = "3.0.0" }
# Substrate
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
# Frontier
frontier-template-runtime = { path = "../../template/runtime" }
