[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
kvdb-rocksdb = "0.14.0"
parking_lot = "0.11.2"

codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-database = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}

fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }
