[package]
name = "fp-dynamic-fee"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2021"
description = "Dynamic fee inherent primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-inherents/std",
]
