[package]
name = "fp-rpc"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2021"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[dependencies]
ethereum = { version = "0.11.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.12", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",

	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",

	"fp-evm/std",
]
