[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
log = "0.4.8"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"

sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}

sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}

fp-consensus = { path = "../../primitives/consensus" }
fp-rpc = { path = "../../primitives/rpc" }
fp-storage = { path = "../../primitives/storage" }

fc-consensus = { path = "../../client/consensus" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }
fc-rpc = { path = "../../client/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }

pallet-base-fee = { path = "../../frame/base-fee" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
pallet-ethereum = { path = "../../frame/ethereum" }
pallet-evm = { path = "../../frame/evm" }

frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
